# Chessly

./: CMakeLists.txt  LICENSE  README.md  resources.qrc
docs/: Module-1-Core_Chess_Engine.md  Module-2-Board_Representation_&_View_Mapping.md  Module-3-Networking.md  Module-4-Messaging_&_Protocol_Design.md  Module-5-Threading_&_Synchronization_Model.md  Module-6-Qt_UI_&_UX_Architecture.md  Module-7-Platform_&_Build_System.md
src/: ChessBoard.cpp  ChessBoard.h  GameLogic.cpp  GameLogic.h  MainWindow.cpp  MainWindow.h  NetworkMessages.h  main.cpp
